# OS

./: .gitignore  CMakeLists.txt  README.md  TODO.md  run-host.sh
boot/: boot.S  grub.cfg  linker.ld
build-host/: CMakeCache.txt  Makefile  cmake_install.cmake
build-host/compiled/: core.img  mtools.conf
build-orb/: CMakeCache.txt  Makefile  cmake_install.cmake
kernel/: main.c
libs/inc/: boot.h  context.h  cpu.h  disk.h  elf.h  events.h  fat.h  files.h  graphics.h  interrupts.h  keyboard.h  mouse.h  os_setjmp.h  paging.h  ports.h  privledge.h  syscalls.h  tss.h
libs/inc/sys/: kmalloc.h  string.h
libs/inc/userspace/: events.h  fs.h  malloc.h  stdio.h  sys.h  vbuff.h
libs/src/boot/: boot.c  elftest.c  fattest.c  terminal.c
libs/src/disk/: ata.c  elf.c  fat.c  files.c
libs/src/graphics/: draw.c  init.c  shapes.c  tty.c
libs/src/input/: events.c  keyboard.c  mouse.c
libs/src/interrupts/: idt.c  pic.c  syscalls.c  tss.c
libs/src/lib/: string.c
libs/src/sys/: context.c  paging.c  privledge.c  setjmp.c
libs/src/sys/kmalloc/: memlib.c  mm.c
userspace/: Makefile
userspace/desk/: hello.txt
userspace/lib/: main.c
userspace/src/: TODO  _exec.c  cat.c  exec.c  filetest.c  ls.c  lst.c  test.c  touch.c
userspace/src/rila/: launch.c  render.c  server.c
userspace/src/rila/inc/: launch.h  render.h  server.h
userspace/src/rila/libs/: bmp.c
userspace/src/rila/libs/inc/: bmp.h
userspace/src/rila/wserver/: click.c  desktop.c  mouse.c  render.c  window.c
userspace/src/rila/wserver/inc/: click.h  window.h  wserver.h
userspace/src/test/: event.c  file.c  hello.c  pixel.c
userspace/util/: build.sh  user.ld
